# ChangeLog for dev-libs/clearsilver
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/clearsilver/ChangeLog,v 1.45 2014/08/10 20:32:57 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  clearsilver-0.10.5-r1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  02 Dec 2012; Ulrich Müller <ulm@gentoo.org> clearsilver-0.10.5-r1.ebuild:
  Update LICENSE, this is identical with the Apache-1.1 license, bug 444848.

  25 Apr 2012; Justin Lecher <jlec@gentoo.org> clearsilver-0.10.5-r1.ebuild:
  Drop unnessecary die

  16 Mar 2012; Mike Gilbert <floppym@gentoo.org> clearsilver-0.10.5-r1.ebuild:
  Python-related improvements by Arfrever. Bug 312179.

  26 Mar 2011; Torsten Veller <tove@gentoo.org> -clearsilver-0.10.5.ebuild:
  Cleanup

  26 Mar 2011; Christian Faulhammer <fauli@gentoo.org>
  clearsilver-0.10.5-r1.ebuild:
  stable x86, bug 295895

  25 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  clearsilver-0.10.5-r1.ebuild:
  ppc/ppc64 stable wrt #295895

  11 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  clearsilver-0.10.5-r1.ebuild:
  Stable on amd64 wrt bug #295895

*clearsilver-0.10.5-r1 (09 Mar 2011)

  09 Mar 2011; Torsten Veller <tove@gentoo.org> +clearsilver-0.10.5-r1.ebuild,
  +files/clearsilver-0.10.5-perl_installdir.patch:
  Move perl modules to vendor_dir (#295895)

  28 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Julien Allanos (dju) from metadata.xml (as per #87168).

  25 Jan 2008; Doug Klima <cardoe@gentoo.org> clearsilver-0.10.5.ebuild:
  amd64 stable wrt bug #203584

  29 Dec 2007; Brent Baude <ranger@gentoo.org> clearsilver-0.10.5.ebuild:
  Marking clearsilver-0.10.5 ppc64 for bug 203584

  28 Dec 2007; Markus Meier <maekke@gentoo.org> clearsilver-0.10.5.ebuild:
  x86 stable wrt bug #203584 and quotes

  28 Dec 2007; nixnut <nixnut@gentoo.org> clearsilver-0.10.5.ebuild:
  Stable on ppc wrt bug 203584

*clearsilver-0.10.5 (02 Nov 2007)
