@@ -5,13 +5,25 @@ AUX clearsilver-0.10.5-libdir.patch 693 SHA256 ec5e340eb9fdb94c8e05f5bdc79bc954c
 AUX clearsilver-0.10.5-libz.patch 276 SHA256 51e769a619a23aff2b2a26e17954eba6cd3101f581b1807465226f55e0f42d02 SHA512 0c5ab50bd55f6a4e5d65f01e170ab17d268c3fde5615c83aef967b70973c844ad91770f30e8ec8382bed4d177685774d4a7d44c274e0e83db605e4a7148abf14 WHIRLPOOL bb4253569fa161eea75501d4a59f06b59c1c0fafb22b511824f913af8fb07adc2cf60078c6954e9ae67ac982b822676bca0b4ad6e9323e01e4bc7f3bac011b7c
 AUX clearsilver-0.10.5-perl_installdir.patch 857 SHA256 d08fc906d7cec21419166b2de962e1fc0485445552d03fc16024125094285212 SHA512 5e31edddf1f8c845bdbc3e313230825c1ee680bb65a72fe1eed21d3335c6c0bdb4a3c34342562adc1978cb8cf245e738c6a42077fe3136b45ac53191cc65da28 WHIRLPOOL e52d76e2efef619cd68f9dd646f51f86f5f8202f33d3a1d602a05c95eeb44cc4505be8ad42e96e61c682412c71f9d5557a71bebba35b001c2a07d8abac057152
 DIST clearsilver-0.10.5.tar.gz 439190 SHA256 1e9da038deafddd3d0c1c510626c28be5a0f4f17b9091d577fd30e7c5ba88680 SHA512 05a3c2140d462b8120fa41f74c09ca9246184259b6bdf147581e23e4441f700b9737f82145d8ff96996d93e37bd6a660c68f58f27370c903777a914235ea53b9 WHIRLPOOL a1ec3c88d46d4ab61f3540f62a5461679353102dbf4a0837b369a6a4d769c7f7a9934662575f75f2cf7b29aa7b9581d0dbcea6847548fae71f8998eb612146f2
-EBUILD clearsilver-0.10.5-r1.ebuild 1726 SHA256 cc34087951006c2a22b1df4104ec461a238374d18fef8862a434353f5f73ea87 SHA512 8ce7b0a0b40d88e27ff1c5f71791e27bd279f52ac26d82181348fd2880003438047c8c6fbb2c4aa7b0fb41b66cf29a0193020b9c0c785feee2e5207c4de9f61e WHIRLPOOL 15b7e08e64d73e3dd2b9bf8709d292ddb00fbf5c0bed14c9ab97af87429bb1790f9e3e580f989635235e901bfc8a964761090a456f03178de465abd8972289e8
-MISC ChangeLog 6927 SHA256 ffb9cbfda16da427554614ba1072dd61c12b67421808ea06301c7238a886b67b SHA512 5decf4d89ec8f07ab6a069321bed0cae94259bdd0dab71f4063f750d8df7d4dd76c83d03135f447f2dd04bda3de0f756269ae433e99f268f4c00139a7d5f5614 WHIRLPOOL 2eefad9dcd875e3d76246b30185ea236ffbd1e9f8756c260014b1878464b907c148a9e8aa02b81652fd8d4f0bb266d496bc17f54ecc41b69144f6a0632dda635
+EBUILD clearsilver-0.10.5-r2.ebuild 1729 SHA256 a479235f1825e212146b9da61da05902a0ea7c0c3e0e320c6262c31c2d1014a8 SHA512 4bca3df96526f79e7be9d5730d8819f2c5749ff4281132e941f53a79de5f960beb2a85c59a1ce960557a6f2f364648a7a44ee584cc2cb8115a4a630d32020044 WHIRLPOOL 572bddba61c3cc4fad71bf72997110883f1e3575a38b3c7b0fa7633c33a8725669182c87ee83a21aae94fae2896910e188879f92d51e27619ccaf8cce3371589
+MISC ChangeLog 7140 SHA256 ccc5caf4372a91599ef81aa20b2c3fa919baadbd7d4883dcbf9f100a51a83c91 SHA512 633a39cdd359dc44e91b035b41c0029cbbc83d02b36a07b3a34aff605b558610aec98718f3ac4300f897a9bf04592c40e51bd455ba4bdab041ae8cbd629e9575 WHIRLPOOL b9e4afe0e43e57b6ed6582bc3b23fe6036edff46a3e07d85859489a2ffb01f98363769acdf825338beb89872db0c29caf676c34294ccbaeabafb5d882b6adf9f
 MISC metadata.xml 162 SHA256 84ff2fc6c9a4af1b9dbe32aa81ab84c2958bc1bd65a9977686df2dcab6e420d0 SHA512 550d0f517601255e5c9b120a03f1dad37a1a75bdaadad486ddbd2380a7f0dd884970400574455d34d3ba6e800d9fd21467dfb7f89ba27a0aa8a65e7a265534e3 WHIRLPOOL d50adcb067d0290aa7dfe5aebd0e8abf4939ece7afbf284920d08f2bf04f9306f0062a78cacb7572a12735ac41545440fcf138beda81cc53774950bdde495dcb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlPn1voACgkQcaHudmEf86paOgCfXowjTKWMcsOJ0p7pbQEJim8w
-yO8AnRmZWfcxUWUxR3pPvt7KKztUs9MP
-=IykG
+iQJ8BAEBCABmBQJUTB9oXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOc6TcQAMKVjgaxKeewYXnV2QF1vOFF
+DrpJ49lIQ2C6oU7lCii9+a6EA3f6Qw/POLhaEGxyzT/teGIazkcqcHAel7BH+5T2
+TlQCFMg1HdQ4gJk4o1CeI7o7BUP54Z4ePl9U5ssI1kd445+xZSG1FrZMWId2YF1V
+EAUqwKXaCAs0B0DjZ71u3KWAyP+R3tqjQjo9+3iwS/CCJz8OZH7ZMQTOkfRgeXa7
+0t3xXsKBF5Bct4hPrwon92PFyqJWLwDR/t99MU+dGYypmM2jab4Pgc0VdXzQ9HFd
+rv1HAVkBsxtl5AE0Q4WjHUrXS62JaubukPe/klKJ90ZxVnqC4x2pZL4hVdW+63V9
+QM2GnDElTuGzNHFhvAIqqHI8JGHr11KMz5wRepf3I7c1sY8jFQRRZUsy/t9NBMT6
+EjC4ToO3LriDyl0KoRmec9hJsdJqN12LTST7y3AM51r1Xji/UoEllnhWaoFp/xl7
+UmZIMJ8/WGyNjiqE5osfqTjIfga8OfG+ojw1SUv/Tbu6yL7+7nIWfUp35pxsS4nm
+bEmkwBoipmlKwvp7rXJK+0yJJpqEgwvSYeLQaX5p415QYcSfraW79OGZkIjQIad9
+nhBDspVlf5KscLMTEpQjcTXInWe6vEJJ/cFcl2miSJnZfFPEfQ1LpMj1O33ovWnK
+fSruYyDyat9YyVZRFsNx
+=AT9A
 -----END PGP SIGNATURE-----
