@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/clearsilver
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/clearsilver/ChangeLog,v 1.45 2014/08/10 20:32:57 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/clearsilver/ChangeLog,v 1.46 2014/10/25 22:08:39 dilfridge Exp $
+
+*clearsilver-0.10.5-r2 (25 Oct 2014)
+
+  25 Oct 2014; Andreas K. Huettel <dilfridge@gentoo.org>
+  +clearsilver-0.10.5-r2.ebuild, -clearsilver-0.10.5-r1.ebuild:
+  EAPI bump; add slot operator on Perl dependency
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
   clearsilver-0.10.5-r1.ebuild:
